@startuml components

<style>
.legende {
 LineStyle 2
}
</style>

footer Einige Dateien ausgelassen

title Komponenten der Anwendung

allowmixing

frame E-Graph #LightBlue {
class AbstractSyntaxTreeNode
class AbstractSyntaxTree
class RewriteRule
class ENode
class EClass
class EGraph
}

frame Service #LightBlue {
class EGraphService
}

frame Server #LightBlue{
file [ server.py ] as server
}

frame Weboberfläche #LightBlue {
file "index.html" as index
file "index.js" as javascript
component "dokumentation" as docs
}

hide members

index<-left->javascript
EGraphService<--server
EGraph<--EGraphService
AbstractSyntaxTreeNode<--AbstractSyntaxTree
AbstractSyntaxTree<--EGraph
AbstractSyntaxTree<-- RewriteRule
EClass<--EGraph
ENode<--EGraph
RewriteRule<--EGraph
server<-down->index: Kommunikation durch HTTP, \n Daten im JSON-Format

note right of [server]
Ein mit <<FastAPI>> erstellter 
Webserver, der Anfragen der 
Website beantwortet und dazu 
den EGraphService nutzt.
end note

note left of [EGraphService]
Regelt die Interaktion zwischen Server
und EGraph. Stellt revelante Funktionen,
z.B. für das Debugging, bereit. 
end note

note right of [EGraph]
Nimmt AST entgegen und
erstellt daraus einen E-Graph.
Stellt weitere Methoden zur
Interaktion, Visualisierung
und Export von E-Graphs bereit.
end note

note left of [index]
Lokale Website, die Interaktion mit
E-Graphs ermöglicht. Stellt veschiedene
Features, darunter Schritt-für-Schritt
Ausführung und Export des E-Graphs zur
Verfügung. Die Dokumentation ist ebenfalls
unter der Website erreichbar.
end note

note as N1 <<legende>> #white 
__Legende__
<img:arrow.png>
Abhängigkeit zwischen zwei Komponenten 
end note

@enduml